--- a/ipynbs/20151018T110000_examples.ipynb
+++ b/ipynbs/20151018T110000_examples.ipynb
@@ -53,135 +53,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Examples"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Shuffling a `pandas.DataFrame`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>c0</th>\n",
-       "      <th>c1</th>\n",
-       "      <th>c2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>r0</th>\n",
-       "      <td>A</td>\n",
-       "      <td>a</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>r1</th>\n",
-       "      <td>B</td>\n",
-       "      <td>b</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>r2</th>\n",
-       "      <td>C</td>\n",
-       "      <td>c</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   c0 c1  c2\n",
-       "r0  A  a   0\n",
-       "r1  B  b   1\n",
-       "r2  C  c   2"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = pd.DataFrame(\n",
-    "    data=[('A', 'a', 0), ('B', 'b', 1), ('C', 'c', 2)],\n",
-    "    index=['r0', 'r1', 'r2'], columns=['c0', 'c1', 'c2'])\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>c2</th>\n",
-       "      <th>c1</th>\n",
-       "      <th>c0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>r2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>c</td>\n",
-       "      <td>C</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>r1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>b</td>\n",
-       "      <td>B</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>r0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>a</td>\n",
-       "      <td>A</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    c2 c1 c0\n",
-       "r2   2  c  C\n",
-       "r1   1  b  B\n",
-       "r0   0  a  A"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "demo.utils.shuffle_dataframe(df=df, seed_row=0, seed_col=0)"
+    "## Examples\n",
+    "\n",
+    "TODO"
    ]
   },
   {
