utils: added pytest

--- a/demo/app_template/examples/example_app_template_dev.ipynb
+++ b/demo/app_template/examples/example_app_template_dev.ipynb
@@ -77,7 +77,7 @@
     "print()\n",
     "print(\"Versions:\")\n",
     "print(\"Python:\", sys.version_info)\n",
-    "print(\"demo:\", ds.__version__)"
+    "print(\"demo:\", demo.__version__)"
    ]
   },
   {
