--- a/demo/app_template/examples/example_app_template_dev.ipynb
+++ b/demo/app_template/examples/example_app_template_dev.ipynb
@@ -47,7 +47,7 @@
     "sys.path.insert(0, os.path.join(os.path.curdir, r'demo'))\n",
     "%reload_ext autoreload\n",
     "%autoreload 2\n",
-    "import demo as ds\n",
+    "import demo\n",
     "%matplotlib inline"
    ]
   },
