app_template: pytests pass

--- a/demo/app_template/examples/example_app_template.ipynb
+++ b/demo/app_template/examples/example_app_template.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -40,19 +40,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fri Sep 16 18:40:49 UTC 2016\n",
-      "__version__ = '0.1.0'\n"
+      "Fri Feb 24 04:16:48 UTC 2017\n",
+      "__version__ = '0.0.0'\n"
      ]
     }
    ],
    "source": [
     "!date --utc\n",
-    "!grep \"__version__\" demo/__init__.py"
+    "!grep \"__version__ =\" demo/__init__.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -64,7 +64,7 @@
       "usage: main.py [-h] --app_arg APP_ARG\r\n",
       "               [--logging_level {DEBUG,INFO,WARNING,ERROR,CRITICAL}]\r\n",
       "\r\n",
-      "Template for data science applications.\r\n",
+      "Template for demo applications.\r\n",
       "\r\n",
       "optional arguments:\r\n",
       "  -h, --help            show this help message and exit\r\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -91,16 +91,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Azure container:\r\n",
-      "demo-logs\r\n",
-      "Azure blob:\r\n",
-      "20160916T184100Z_app-template.log\r\n"
+      "Log path:\r\n",
+      "/tmp/app-template_20170224T041700Z.log\r\n"
      ]
     }
    ],
    "source": [
     "!python demo/app_template/main.py --app_arg 'my argument'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
