--- a/demo/app_template/examples/example_app_template_dev.ipynb
+++ b/demo/app_template/examples/example_app_template_dev.ipynb
@@ -43,7 +43,6 @@
     "import time\n",
     "# Import installed packages.\n",
     "# Import local packages.\n",
-    "# demo version: TODO link to GitHub tag.\n",
     "sys.path.insert(0, os.path.join(os.path.curdir, r'demo'))\n",
     "%reload_ext autoreload\n",
     "%autoreload 2\n",
@@ -63,11 +62,11 @@
      "output_type": "stream",
      "text": [
       "Timestamp:\n",
-      "2016-09-16T18:42:30GMT\n",
+      "2017-02-24T04:17:24GMT\n",
       "\n",
       "Versions:\n",
       "Python: sys.version_info(major=3, minor=5, micro=2, releaselevel='final', serial=0)\n",
-      "demo: 0.1.0\n"
+      "demo: 0.0.0\n"
      ]
     }
    ],
@@ -96,37 +95,33 @@
       "platform linux -- Python 3.5.2, pytest-2.9.2, py-1.4.31, pluggy-0.3.1 -- /opt/conda/bin/python\n",
       "cachedir: .cache\n",
       "rootdir: /opt/demo, inifile: \n",
-      "collected 21 items \n",
+      "collected 8 items \n",
       "\u001b[0m\n",
-      "tests/test_init.py::test_version \u001b[32mPASSED\u001b[0m\n",
-      "tests/test_app_reporting/test_reporting.py::test_csv_dataframe_io \u001b[32mPASSED\u001b[0m\n",
+      "tests/test__init__.py::test__all__ \u001b[32mPASSED\u001b[0m\n",
+      "tests/test__init__.py::test__version__ \u001b[32mPASSED\u001b[0m\n",
       "tests/test_app_template/test_app_template__init__.py::test__all__ \u001b[32mPASSED\u001b[0m\n",
       "tests/test_app_template/test_app_template_main.py::test__all__ \u001b[32mPASSED\u001b[0m\n",
       "tests/test_app_template/test_app_template_main.py::test_main \u001b[32mPASSED\u001b[0m\n",
       "tests/test_app_template/test_app_template_main.py::test__main__ \u001b[32mPASSED\u001b[0m\n",
       "tests/test_app_template/test_template.py::test_prepend_this \u001b[32mPASSED\u001b[0m\n",
-      "tests/test_app_update_mssql/test_app_update_mssql__init__.py::test__all__ \u001b[32mPASSED\u001b[0m\n",
-      "tests/test_app_update_mssql/test_app_update_mssql_main.py::test__all__ \u001b[32mPASSED\u001b[0m\n",
-      "tests/test_utils/test_resources.py::test_get_credentials \u001b[32mPASSED\u001b[0m\n",
-      "tests/test_utils/test_resources.py::test_create_azureblob_resource \u001b[32mPASSED\u001b[0m\n",
-      "tests/test_utils/test_resources.py::test_create_azurequeue_resource \u001b[32mPASSED\u001b[0m\n",
-      "tests/test_utils/test_resources.py::test_create_azuretable_resource \u001b[32mPASSED\u001b[0m\n",
-      "tests/test_utils/test_resources.py::test_azure_storage_containers_exist \u001b[32mPASSED\u001b[0m\n",
-      "tests/test_utils/test_resources.py::test_create_bigquery_resource \u001b[32mPASSED\u001b[0m\n",
-      "tests/test_utils/test_resources.py::test_create_ga_resource \u001b[32mPASSED\u001b[0m\n",
-      "tests/test_utils/test_resources.py::test_java_installed \u001b[32mPASSED\u001b[0m\n",
-      "tests/test_utils/test_resources.py::test_create_mssql_resource_query \u001b[32mPASSED\u001b[0m\n",
-      "tests/test_utils/test_resources.py::test_create_mssql_resource_query_suppl \u001b[32mPASSED\u001b[0m\n",
-      "tests/test_utils/test_resources.py::test_create_mssql_resource_insert \u001b[32mPASSED\u001b[0m\n",
-      "tests/test_utils/test_resources.py::test_create_odata_resource \u001b[32mPASSED\u001b[0m\n",
+      "tests/test_utils/test_utils__init__.py::test__all__ \u001b[32mPASSED\u001b[0m\n",
       "\n",
-      "\u001b[1m\u001b[32m========================== 21 passed in 24.25 seconds ==========================\u001b[0m\n"
+      "\u001b[32m\u001b[1m=========================== 8 passed in 4.20 seconds ===========================\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "!py.test -v"
+    "!py.test -v --pdb"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
