app_predict: add data

--- a/demo/app_predict/examples/example_app_predict_dev.ipynb
+++ b/demo/app_predict/examples/example_app_predict_dev.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -150,11 +150,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/opt/demo\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd /opt/demo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.5/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n",
+      "/opt/conda/lib/python3.5/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
+     ]
+    }
+   ],
    "source": [
     "# Import standard packages.\n",
     "import collections\n",
@@ -191,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -201,7 +231,7 @@
      "output_type": "stream",
      "text": [
       "Timestamp:\n",
-      "2017-02-24T15:20:10GMT\n",
+      "2017-02-24T21:26:10GMT\n",
       "\n",
       "Versions:\n",
       "Python: sys.version_info(major=3, minor=5, micro=2, releaselevel='final', serial=0)\n",
@@ -239,6 +269,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0m\u001b[01;34mbin\u001b[0m/   \u001b[01;34mdev\u001b[0m/  \u001b[01;34mhome\u001b[0m/  \u001b[01;34mlib64\u001b[0m/  \u001b[01;34mmnt\u001b[0m/  \u001b[01;34mproc\u001b[0m/  \u001b[01;34mrun\u001b[0m/   \u001b[01;34msrv\u001b[0m/  \u001b[30;42mtmp\u001b[0m/  \u001b[01;34mvar\u001b[0m/\r\n",
+      "\u001b[01;34mboot\u001b[0m/  \u001b[01;34metc\u001b[0m/  \u001b[01;34mlib\u001b[0m/   \u001b[01;34mmedia\u001b[0m/  \u001b[01;34mopt\u001b[0m/  \u001b[01;34mroot\u001b[0m/  \u001b[01;34msbin\u001b[0m/  \u001b[01;34msys\u001b[0m/  \u001b[01;34musr\u001b[0m/\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {
     "collapsed": false
@@ -252,7 +302,34 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "# State settings.\n",
+    "sns.set() # Set matplot lib styles with seaborn\n",
+    "np.random.seed(seed=1) # Set random state for reproducibility.\n",
+    "\n",
+    "# File paths\n",
+    "path_app = os.path.join(r'/home_vagrant/datascience/datascience/app_reporting')\n",
+    "path_data = os.path.join(path_app, r'data')\n",
+    "paths_overviews_oldnew = glob.glob(\n",
+    "    path_data+'/'+\n",
+    "    r'20160527_GA_*_Analytics theodysseyonline.com Audience Overview 20140101-20160526.csv')\n",
+    "path_sessionsbychannel_oldnew = os.path.join(\n",
+    "    path_data,\n",
+    "    r'20160527_GA_SessionsByChannels_Analytics theodysseyonline.com Channels 20140101-20160526.csv')\n",
+    "paths_fb_oldnew = glob.glob(\n",
+    "    path_data+'/'+\n",
+    "    r'20160601_FB_*.csv')\n",
+    "\n",
+    "# Date of launch of new site.\n",
+    "date_launch = pd.to_datetime('2016-05-11')\n",
+    "\n",
+    "# Statistics\n",
+    "# percentiles = [-1.6449 sigma, -1 sigma, mean, +1 sigma, +1.6449 sigma] for normal distribution\n",
+    "# 90.00% confidence interval = (percentiles[0], percentiles[-1])\n",
+    "# 68.27% confidence interval = (percentiles[1], percentiles[-2])\n",
+    "# median = percentiles[2]\n",
+    "percentiles = [0.0500, 0.1587, 0.5000, 0.8413, 0.9500]"
+   ]
   },
   {
    "cell_type": "code",
