app_predict: finished cumulative features

--- a/demo/app_predict/examples/example_app_predict_dev.ipynb
+++ b/demo/app_predict/examples/example_app_predict_dev.ipynb
@@ -225,7 +225,7 @@
      "output_type": "stream",
      "text": [
       "Timestamp:\n",
-      "2017-02-27T16:37:37GMT\n",
+      "2017-02-27T19:46:43GMT\n",
       "\n",
       "Versions:\n",
       "Python: sys.version_info(major=3, minor=5, micro=2, releaselevel='final', serial=0)\n",
@@ -289,11 +289,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "`df`: Load and format sales transactions.\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -483,7 +490,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -552,47 +559,47 @@
       "BuyerID_numTransactions                                       int64\n",
       "BuyerID_numDSEligible1                                        int64\n",
       "BuyerID_fracDSEligible1DivTransactions                      float64\n",
-      "BuyerID_numReturnedNotNull                                  float64\n",
+      "BuyerID_numReturnedNotNull                                    int64\n",
       "BuyerID_fracReturnedNotNullDivDSEligible1                   float64\n",
-      "BuyerID_numReturned1                                        float64\n",
+      "BuyerID_numReturned1                                          int64\n",
       "BuyerID_fracReturned1DivReturnedNotNull                     float64\n",
-      "BuyerID_numReturnedasm1                                     float64\n",
+      "BuyerID_numReturnedasm1                                       int64\n",
       "BuyerID_fracReturnedasm1DivTransactions                     float64\n",
       "SellerID_numTransactions                                      int64\n",
-      "SellerID_numDSEligible1                                     float64\n",
+      "SellerID_numDSEligible1                                       int64\n",
       "SellerID_fracDSEligible1DivTransactions                     float64\n",
-      "SellerID_numReturnedNotNull                                 float64\n",
+      "SellerID_numReturnedNotNull                                   int64\n",
       "SellerID_fracReturnedNotNullDivDSEligible1                  float64\n",
-      "SellerID_numReturned1                                       float64\n",
+      "SellerID_numReturned1                                         int64\n",
       "SellerID_fracReturned1DivReturnedNotNull                    float64\n",
-      "SellerID_numReturnedasm1                                    float64\n",
+      "SellerID_numReturnedasm1                                      int64\n",
       "SellerID_fracReturnedasm1DivTransactions                    float64\n",
       "VIN_numTransactions                                           int64\n",
-      "VIN_numDSEligible1                                          float64\n",
+      "VIN_numDSEligible1                                            int64\n",
       "VIN_fracDSEligible1DivTransactions                          float64\n",
-      "VIN_numReturnedNotNull                                      float64\n",
+      "VIN_numReturnedNotNull                                        int64\n",
       "VIN_fracReturnedNotNullDivDSEligible1                       float64\n",
-      "VIN_numReturned1                                            float64\n",
+      "VIN_numReturned1                                              int64\n",
       "VIN_fracReturned1DivReturnedNotNull                         float64\n",
-      "VIN_numReturnedasm1                                         float64\n",
+      "VIN_numReturnedasm1                                           int64\n",
       "VIN_fracReturnedasm1DivTransactions                         float64\n",
       "SellingLocation_numTransactions                               int64\n",
       "SellingLocation_numDSEligible1                                int64\n",
       "SellingLocation_fracDSEligible1DivTransactions              float64\n",
-      "SellingLocation_numReturnedNotNull                          float64\n",
+      "SellingLocation_numReturnedNotNull                            int64\n",
       "SellingLocation_fracReturnedNotNullDivDSEligible1           float64\n",
-      "SellingLocation_numReturned1                                float64\n",
+      "SellingLocation_numReturned1                                  int64\n",
       "SellingLocation_fracReturned1DivReturnedNotNull             float64\n",
-      "SellingLocation_numReturnedasm1                             float64\n",
+      "SellingLocation_numReturnedasm1                               int64\n",
       "SellingLocation_fracReturnedasm1DivTransactions             float64\n",
       "CarMake_numTransactions                                       int64\n",
-      "CarMake_numDSEligible1                                      float64\n",
+      "CarMake_numDSEligible1                                        int64\n",
       "CarMake_fracDSEligible1DivTransactions                      float64\n",
-      "CarMake_numReturnedNotNull                                  float64\n",
+      "CarMake_numReturnedNotNull                                    int64\n",
       "CarMake_fracReturnedNotNullDivDSEligible1                   float64\n",
-      "CarMake_numReturned1                                        float64\n",
+      "CarMake_numReturned1                                          int64\n",
       "CarMake_fracReturned1DivReturnedNotNull                     float64\n",
-      "CarMake_numReturnedasm1                                     float64\n",
+      "CarMake_numReturnedasm1                                       int64\n",
       "CarMake_fracReturnedasm1DivTransactions                     float64\n",
       "JDPowersCat_numTransactions                                   int64\n",
       "JDPowersCat_numDSEligible1                                    int64\n",
