--- a/demo/app_template/examples/example_app_template_dev.ipynb
+++ b/demo/app_template/examples/example_app_template_dev.ipynb
@@ -116,12 +116,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# DEVELOP BELOW"
+   ]
   }
  ],
  "metadata": {
