--- a/demo/app_api/examples/example_app_api_dev.ipynb
+++ b/demo/app_api/examples/example_app_api_dev.ipynb
@@ -553,6 +553,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"sl\":{\"0\":5.7,\"1\":6.9},\"sw\":{\"0\":4.4,\"1\":3.1},\"pl\":{\"0\":1.5,\"1\":4.9},\"pw\":{\"0\":0.4,\"1\":1.5}}'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(\n",
+    "    data=X_test,\n",
+    "    columns=['sl', 'sw', 'pl', 'pw'])[:2].to_json()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "metadata": {
     "collapsed": false
@@ -570,83 +594,48 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "import argparse\n",
+    "parser = argparse.ArgumentParser(description='abc')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'results': [2, 2]}"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res.json()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "test = np.array([1,2,3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "usage: __main__.py [-h] [--foo FOO]\n",
+      "__main__.py: error: unrecognized arguments: -f /root/.local/share/jupyter/runtime/kernel-353185a7-99fa-4acc-9e56-0832a5d93a8e.json\n"
+     ]
+    },
     {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3]"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test.tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
+     "ename": "SystemExit",
+     "evalue": "2",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 2\n"
+     ]
+    },
     {
-     "data": {
-      "text/plain": [
-       "'{\"sl\":{\"0\":5.5,\"1\":5.84},\"sw\":{\"0\":3.0,\"1\":3.0},\"pl\":{\"0\":3.5,\"1\":3.75},\"pw\":{\"0\":1.0,\"1\":1.1}}'"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To exit: use 'exit', 'quit', or Ctrl-D.\n"
+     ]
     }
    ],
    "source": [
-    "data.to_json()"
+    "import argparse\n",
+    "parser = argparse.ArgumentParser()\n",
+    "parser.add_argument('--foo', help='foo help')\n",
+    "args = parser.parse_args()"
    ]
   },
   {
