--- a/demo/app_api/examples/example_app_api_dev.ipynb
+++ b/demo/app_api/examples/example_app_api_dev.ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -146,11 +146,10 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn import datasets\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.cross_validation import train_test_split\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.metrics import classification_report\n",
+    "import sklearn.datasets as sk_ds\n",
+    "import sklearn.ensemble as sk_en\n",
+    "import sklearn.cross_validation as sk_cv\n",
+    "import sklearn.metrics as sk_me\n",
     "\n",
     "import pickle\n",
     "import requests, json"
@@ -158,69 +157,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "iris = datasets.load_iris()\n",
-    "X = iris.data\n",
-    "y = iris.target"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "rfc = RandomForestClassifier(n_estimators=100, n_jobs=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
-       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
-       "            min_samples_leaf=1, min_samples_split=2,\n",
-       "            min_weight_fraction_leaf=0.0, n_estimators=100, n_jobs=2,\n",
-       "            oob_score=False, random_state=None, verbose=0,\n",
-       "            warm_start=False)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rfc.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -231,9 +177,9 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00        11\n",
-      "          1       1.00      0.94      0.97        17\n",
-      "          2       0.91      1.00      0.95        10\n",
+      "          0       1.00      1.00      1.00        12\n",
+      "          1       1.00      0.93      0.96        14\n",
+      "          2       0.92      1.00      0.96        12\n",
       "\n",
       "avg / total       0.98      0.97      0.97        38\n",
       "\n"
@@ -241,7 +187,11 @@
     }
    ],
    "source": [
-    "print(classification_report(y_test, rfc.predict(X_test)))"
+    "iris = sk_ds.load_iris()\n",
+    "X_train, X_test, y_train, y_test = sk_cv.train_test_split(iris.data, iris.target)\n",
+    "model = sk_en.RandomForestClassifier(n_estimators=100, n_jobs=2)\n",
+    "model.fit(X_train, y_train)\n",
+    "print(sk_me.classification_report(y_test, rfc.predict(X_test)))"
    ]
   },
   {
@@ -264,7 +214,7 @@
     }
    ],
    "source": [
-    "rfc.predict(X_test)"
+    "metric.predict(X_test)"
    ]
   },
   {
@@ -553,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -564,7 +514,7 @@
        "'{\"sl\":{\"0\":5.7,\"1\":6.9},\"sw\":{\"0\":4.4,\"1\":3.1},\"pl\":{\"0\":1.5,\"1\":4.9},\"pw\":{\"0\":0.4,\"1\":1.5}}'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,69 +523,6 @@
     "pd.DataFrame(\n",
     "    data=X_test,\n",
     "    columns=['sl', 'sw', 'pl', 'pw'])[:2].to_json()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Int64Index' object has no attribute 'sort_index'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-25-39d1eefc6b35>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtest\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Int64Index' object has no attribute 'sort_index'"
-     ]
-    }
-   ],
-   "source": [
-    "import argparse\n",
-    "parser = argparse.ArgumentParser(description='abc')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "usage: __main__.py [-h] [--foo FOO]\n",
-      "__main__.py: error: unrecognized arguments: -f /root/.local/share/jupyter/runtime/kernel-353185a7-99fa-4acc-9e56-0832a5d93a8e.json\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "2",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "To exit: use 'exit', 'quit', or Ctrl-D.\n"
-     ]
-    }
-   ],
-   "source": [
-    "import argparse\n",
-    "parser = argparse.ArgumentParser()\n",
-    "parser.add_argument('--foo', help='foo help')\n",
-    "args = parser.parse_args()"
    ]
   },
   {
